crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-11.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/plugin_partial_bundling/src/generate_module_pots.rs
---
(
    ModulePot {
        name: Some(
            "test",
        ),
        id: "test",
        size: 15360,
        module_type: Js,
        immutable: false,
        execution_order: 1,
        enforce: false,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/a.ts",
            query_string: "",
        },
        ModuleId {
            relative_path: "src/b.ts",
            query_string: "",
        },
    ],
)
