crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-2.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        name: "utils/c.ts",
        source_type: MutableModule,
        size: 1024,
        module_type: Js,
        immutable: false,
        execution_order: 3,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "utils/c.ts",
            query_string: "",
        },
    ],
)
