crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-3.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        name: None,
        id: "src/a.ts",
        size: 10240,
        module_type: Js,
        immutable: false,
        execution_order: 1,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/a.ts",
            query_string: "",
        },
    ],
)
