crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-4.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        id: "src/b.ts_js_false",
        name: "src/b.ts",
        source_type: MutableModule,
        size: 5120,
        module_type: Js,
        immutable: false,
        execution_order: 2,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/b.ts",
            query_string: "",
        },
    ],
)
