crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-6.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        id: "src/a.ts_js_false",
        name: "src/a.ts",
        source_type: MutableModule,
        size: 10240,
        module_type: Js,
        immutable: false,
        execution_order: 1,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/a.ts",
            query_string: "",
        },
    ],
)
