crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-7.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        name: None,
        id: "src/b.ts",
        size: 5120,
        module_type: Js,
        immutable: false,
        execution_order: 2,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/b.ts",
            query_string: "",
        },
    ],
)
