crates/plugin_partial_bundling/src/snapshots/generate_module_pots_group-9.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        id: "test_js_false",
        name: "test",
        source_type: GroupsConfig,
        size: 15360,
        module_type: Js,
        immutable: false,
        execution_order: 1,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "src/a.ts",
            query_string: "",
        },
        ModuleId {
            relative_path: "src/b.ts",
            query_string: "",
        },
    ],
)
