crates/plugin_partial_bundling/src/snapshots/generate_module_pots_package-2.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        name: None,
        id: "test-package@1.0.0",
        size: 15360,
        module_type: Js,
        immutable: true,
        execution_order: 2,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "tests/fixtures/generate_module_pots/basic/index.ts",
            query_string: "",
        },
        ModuleId {
            relative_path: "tests/fixtures/generate_module_pots/basic/utils.ts",
            query_string: "",
        },
    ],
)
