crates/plugin_partial_bundling/src/snapshots/generate_module_pots_package.snap
---
source: crates/plugin_partial_bundling/src/generate_module_pots.rs
input_file: crates/testing_helpers/src/lib.rs
---
(
    ModulePot {
        name: None,
        id: "test-package1@1.0.0",
        size: 1024,
        module_type: Js,
        immutable: true,
        execution_order: 1,
        modules: {},
    },
    [
        ModuleId {
            relative_path: "tests/fixtures/generate_module_pots/basic1/index.ts",
            query_string: "",
        },
    ],
)
